--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,10 @@ jobs:
       - run:
           name: set path
           command: echo "export PATH=$LISP_IMPLS_BIN:$PATH" >> $BASH_ENV
+
+      - run:
+          name: install X virtual framebuffer
+          command: sudo apt-get install xvfb
       - run:
           name: run X virtual framebuffer
           command: xvfb :99 -screen 0 1280x1024x24
