--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
             sudo apt-get install -y xvfb
       - run:
           name: run X virtual framebuffer
-          command: xvfb :99 -screen 0 1280x1024x24
+          command: Xvfb :99 -screen 0 1280x1024x24
           background: true
       - run:
           name: build-ros
