--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,12 +66,15 @@ jobs:
                       (declare (ignore h))
                       (uiop:print-condition-backtrace c)
                       (uiop:quit -1)))
-              (coveralls:with-coveralls (:exclude (list "t"))
+              (coveralls:with-coveralls (:exclude (list
+                                                        "t"
+                                                        "src/error.lisp"
+                                                        "src/os.lisp"
+                                                        "src/file.lisp"
+                                                        "src/quit.lisp"))
                 (or (asdf:test-system :ceramic)
                   (uiop:quit -1))))
             EOF
-
-
       - run:
           name: run-sbcl
           no_output_timeout: 3m
